<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarForRecite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/recite_words_title" />


    <Button
        android:id="@+id/backForRecite"
        android:layout_width="38dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ciao"
        android:textSize="44sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarForRecite" />

    <Button
        android:id="@+id/voice"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_volume_up_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2">

        <Button
            android:id="@+id/buttonA"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="10sp"
            android:autoText="true"
            android:background="@drawable/buttonshape1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Button"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/voice" />

        <Button
            android:id="@+id/buttonB"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="10sp"
            android:background="@drawable/buttonshape1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Button"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonA" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="10sp"
            android:background="@drawable/buttonshape1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Button"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonB" />

        <Button
            android:id="@+id/buttonD"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="10sp"
            android:background="@drawable/buttonshape1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Button"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/remembereIt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonC" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/showDetails"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="1"
            android:background="@drawable/bluebutton"
            android:text="@string/tell_me"
            android:textSize="28sp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/remembereIt" />

        <Button
            android:id="@+id/remembereIt"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="1"
            android:background="@drawable/bluebutton"
            android:text="@string/grasp_it"
            android:textSize="28sp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/showDetails"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>